@@ -32,6 +32,8 @@ sub bundle_config {
     warn "AVAR: Upgrade to new format" if $args->{repository};
     my $repository_url  = $args->{repository_url};
     my $repository_web  = $args->{repository_web};
+    my $nextrelease_format = $args->{nextrelease_format} // '%-2v %{yyyy-MM-dd HH:mm:ss}d',
+    my $tag_message = $args->{git_tag_message};
     my ($tracker, $tracker_mailto);
     my $page;
     my ($repo_url, $repo_web);
@@ -113,7 +115,7 @@ sub bundle_config {
         # Bump the Changlog
         [
             NextRelease => {
-                format => '%-2v %{yyyy-MM-dd HH:mm:ss}d',
+                format => $nextrelease_format,
             }
         ],
 
@@ -133,6 +135,9 @@ sub bundle_config {
         name    => "$section->{name}/\@Git",
         payload => {
             tag_format => '%v',
+            ($tag_message
+             ? (tag_message => $tag_message)
+             : ()),
         },
     });
 
